@@ -229,8 +229,11 @@ AC_CACHE_CHECK([for g++ major version], [ac_cv_gxx_version_major], [
 ])
 ac_gxx_version_major=$ac_cv_gxx_version_major
 if test $ac_gxx_version_major -ge 4 -a $ac_gxx_version_major -lt 6; then
-   CPPFLAGS="-std=c++11 $CPPFLAGS"
+   CXXFLAGS="-std=c++11 $CXXFLAGS"
    ac_cflags="-std=c++11 $ac_cflags"
+elif test $ac_gxx_version_major -ge 6 -a $ac_gxx_version_major -lt 11; then
+   CXXFLAGS="-std=c++17 $CXXFLAGS"
+   ac_cflags="-std=c++17 $ac_cflags"
 fi
 
 # Check for proper flags.
